--- a/src/application/MainInfinity.fxml
+++ b/src/application/MainInfinity.fxml
@@ -1,25 +1,84 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
+<?import javafx.scene.Cursor?>
 <?import javafx.scene.control.Button?>
+<?import javafx.scene.image.Image?>
+<?import javafx.scene.image.ImageView?>
 <?import javafx.scene.layout.AnchorPane?>
-<?import javafx.scene.layout.BorderPane?>
+<?import javafx.scene.layout.HBox?>
+<?import javafx.scene.layout.Pane?>
 <?import javafx.scene.shape.Line?>
+<?import javafx.scene.text.Font?>
 
-<BorderPane prefHeight="720.0" prefWidth="1280.0" style="-fx-background-color: #F6F6F6;" xmlns="http://javafx.com/javafx/17" xmlns:fx="http://javafx.com/fxml/1" fx:controller="application.MainInfinityClass">
-   <top>
-      <AnchorPane prefHeight="100.0" prefWidth="1280.0" style="-fx-background-color: #1D334A;" BorderPane.alignment="CENTER">
+
+<Pane maxHeight="720.0" maxWidth="1280.0" minHeight="720.0" minWidth="1280.0" prefHeight="720.0" prefWidth="1280.0" xmlns="http://javafx.com/javafx/18" xmlns:fx="http://javafx.com/fxml/1">
+   <children>
+      <AnchorPane layoutX="15.0" layoutY="15.0" prefHeight="105.0" prefWidth="1250.0" style="-fx-background-color: #1D334A; -fx-background-radius: 12;">
          <children>
-            <Button layoutX="1175.0" layoutY="22.0" mnemonicParsing="false" prefHeight="64.0" prefWidth="64.0" text="Button" />
-            <Button layoutX="43.0" layoutY="22.0" mnemonicParsing="false" prefHeight="64.0" prefWidth="150.0" text="Button" />
-            <Button layoutX="225.0" layoutY="22.0" mnemonicParsing="false" prefHeight="64.0" prefWidth="150.0" text="Button" />
-            <Button layoutX="404.0" layoutY="22.0" mnemonicParsing="false" prefHeight="64.0" prefWidth="150.0" text="Button" />
-            <Button layoutX="583.0" layoutY="22.0" mnemonicParsing="false" prefHeight="64.0" prefWidth="150.0" text="Button" />
-            <Button layoutX="760.0" layoutY="22.0" mnemonicParsing="false" prefHeight="64.0" prefWidth="150.0" text="Button" />
-            <Button layoutX="936.0" layoutY="22.0" mnemonicParsing="false" prefHeight="64.0" prefWidth="150.0" text="Button" />
-            <Line endX="1.0" endY="33.0" layoutX="1130.0" layoutY="50.0" startX="1.0" startY="-26.0" stroke="#f6f6f6" strokeWidth="5.0" />
-         </children></AnchorPane>
-   </top>
-   <center>
-      <AnchorPane prefHeight="620.0" prefWidth="1280.0" style="-fx-background-color: #f6f6f6;" BorderPane.alignment="CENTER" />
-   </center>
-</BorderPane>
+            <HBox layoutX="164.0" prefHeight="100.0" prefWidth="986.0">
+               <children>
+                  <Button alignment="CENTER" contentDisplay="CENTER" mnemonicParsing="false" prefHeight="99.0" prefWidth="114.0" style="-fx-background-color: #1d334a;" text="Packs" textAlignment="CENTER" textFill="#f6f6f6">
+                     <font>
+                        <Font name="Malgun Gothic" size="20.0" />
+                     </font>
+                     <cursor>
+                        <Cursor fx:constant="OPEN_HAND" />
+                     </cursor>
+                  </Button>
+                  <Button alignment="CENTER" contentDisplay="CENTER" layoutX="10.0" layoutY="10.0" mnemonicParsing="false" prefHeight="99.0" prefWidth="136.0" style="-fx-background-color: #1d334a;" text="Billetes" textAlignment="CENTER" textFill="#f6f6f6">
+                     <font>
+                        <Font name="Malgun Gothic" size="20.0" />
+                     </font>
+                     <cursor>
+                        <Cursor fx:constant="OPEN_HAND" />
+                     </cursor>
+                  </Button>
+                  <Button alignment="CENTER" contentDisplay="CENTER" layoutX="110.0" layoutY="10.0" mnemonicParsing="false" prefHeight="99.0" prefWidth="176.0" style="-fx-background-color: #1d334a;" text="Alojamiento" textAlignment="CENTER" textFill="#f6f6f6">
+                     <font>
+                        <Font name="Malgun Gothic" size="20.0" />
+                     </font>
+                     <cursor>
+                        <Cursor fx:constant="OPEN_HAND" />
+                     </cursor>
+                  </Button>
+                  <Button alignment="CENTER" contentDisplay="CENTER" layoutX="210.0" layoutY="10.0" mnemonicParsing="false" prefHeight="99.0" prefWidth="257.0" style="-fx-background-color: #1d334a;" text="Vehiculos de alquiler" textAlignment="CENTER" textFill="#f6f6f6">
+                     <font>
+                        <Font name="Malgun Gothic" size="20.0" />
+                     </font>
+                     <cursor>
+                        <Cursor fx:constant="OPEN_HAND" />
+                     </cursor>
+                  </Button>
+                  <Button alignment="CENTER" contentDisplay="CENTER" layoutX="310.0" layoutY="10.0" mnemonicParsing="false" prefHeight="99.0" prefWidth="178.0" style="-fx-background-color: #1d334a;" text="Experiencias" textAlignment="CENTER" textFill="#f6f6f6">
+                     <font>
+                        <Font name="Malgun Gothic" size="20.0" />
+                     </font>
+                     <cursor>
+                        <Cursor fx:constant="OPEN_HAND" />
+                     </cursor>
+                  </Button>
+                  <Button alignment="CENTER" contentDisplay="CENTER" layoutX="310.0" layoutY="10.0" mnemonicParsing="false" prefHeight="99.0" prefWidth="131.0" style="-fx-background-color: #1d334a;" text="Seguros" textAlignment="CENTER" textFill="#f6f6f6">
+                     <font>
+                        <Font name="Malgun Gothic" size="20.0" />
+                     </font>
+                     <cursor>
+                        <Cursor fx:constant="OPEN_HAND" />
+                     </cursor>
+                  </Button>
+               </children>
+            </HBox>
+            <ImageView fitHeight="79.0" fitWidth="77.0" layoutX="40.0" layoutY="12.0" pickOnBounds="true" preserveRatio="true">
+               <image>
+                  <Image url="@../../lib/images/logo.png" />
+               </image>
+            </ImageView>
+            <ImageView fitHeight="64.0" fitWidth="58.0" layoutX="1162.0" layoutY="21.0" pickOnBounds="true" preserveRatio="true">
+               <image>
+                  <Image url="@../../lib/images/carrito.png" />
+               </image>
+            </ImageView>
+            <Line endX="4.0" endY="2.0" layoutX="150.0" layoutY="21.0" startX="4.0" startY="61.0" stroke="#f6f6f6" strokeWidth="3.0" />
+         </children>
+      </AnchorPane>
+   </children>
+</Pane>
