--- a/src/application/PacksPage.fxml
+++ b/src/application/PacksPage.fxml
@@ -1,27 +1,16 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
-<?import javafx.scene.control.ScrollPane?>
 <?import javafx.scene.layout.AnchorPane?>
-<?import javafx.scene.layout.BorderPane?>
-<?import javafx.scene.layout.HBox?>
 <?import javafx.scene.text.Font?>
 <?import javafx.scene.text.Text?>
 
-<BorderPane prefHeight="600.0" prefWidth="1280.0" xmlns="http://javafx.com/javafx/17" xmlns:fx="http://javafx.com/fxml/1" fx:controller="aplication.PacksClass">
-   <center>
-      <ScrollPane prefHeight="200.0" prefWidth="200.0" BorderPane.alignment="CENTER">
-        <content>
-          <AnchorPane minHeight="0.0" minWidth="0.0" prefHeight="598.0" prefWidth="1265.0">
-               <children>
-                  <HBox prefHeight="100.0" prefWidth="200.0" />
-                  <Text layoutX="599.0" layoutY="309.0" strokeType="OUTSIDE" strokeWidth="0.0" text="HOLA">
-                     <font>
-                        <Font size="26.0" />
-                     </font>
-                  </Text>
-               </children>
-            </AnchorPane>
-        </content>
-      </ScrollPane>
-   </center>
-</BorderPane>
+
+<AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="600.0" prefWidth="1280.0" xmlns="http://javafx.com/javafx/17" xmlns:fx="http://javafx.com/fxml/1">
+   <children>
+      <Text fx:id="hola" layoutX="608.0" layoutY="318.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Packs">
+         <font>
+            <Font size="26.0" />
+         </font>
+      </Text>
+   </children>
+</AnchorPane>
