--- a/src/application/BilletesPage.fxml
+++ b/src/application/BilletesPage.fxml
@@ -4,10 +4,14 @@
 <?import javafx.scene.text.Font?>
 <?import javafx.scene.text.Text?>
 
-
-<AnchorPane prefHeight="600.0" prefWidth="1280.0" xmlns:fx="http://javafx.com/fxml/1" xmlns="http://javafx.com/javafx/17" fx:controller="application.BilletesClass">
+<AnchorPane prefHeight="600.0" prefWidth="1280.0" xmlns="http://javafx.com/javafx/17" xmlns:fx="http://javafx.com/fxml/1" fx:controller="application.BilletesClass">
    <children>
-      <Text fx:id="hola" layoutX="600.0" layoutY="310.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Billetes">
+      <Text fx:id="hola" layoutX="599.0" layoutY="292.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Billetes">
+         <font>
+            <Font size="26.0" />
+         </font>
+      </Text>
+      <Text fx:id="hola1" layoutX="533.0" layoutY="328.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Work in progress...">
          <font>
             <Font size="26.0" />
          </font>
