--- a/src/application/VehiculosPage.fxml
+++ b/src/application/VehiculosPage.fxml
@@ -4,10 +4,14 @@
 <?import javafx.scene.text.Font?>
 <?import javafx.scene.text.Text?>
 
-
-<AnchorPane prefHeight="600.0" prefWidth="1280.0" xmlns:fx="http://javafx.com/fxml/1" xmlns="http://javafx.com/javafx/17" fx:controller="application.VehiculosClass">
+<AnchorPane prefHeight="600.0" prefWidth="1280.0" xmlns="http://javafx.com/javafx/17" xmlns:fx="http://javafx.com/fxml/1" fx:controller="application.VehiculosClass">
    <children>
-      <Text fx:id="hola" layoutX="618.0" layoutY="328.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Vehiculos">
+      <Text fx:id="hola" layoutX="575.0" layoutY="291.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Vehiculos">
+         <font>
+            <Font size="26.0" />
+         </font>
+      </Text>
+      <Text fx:id="hola1" layoutX="533.0" layoutY="327.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Work in progress...">
          <font>
             <Font size="26.0" />
          </font>
