--- a/src/application/LoginPage.fxml
+++ b/src/application/LoginPage.fxml
@@ -5,26 +5,27 @@
 <?import javafx.scene.control.TextField?>
 <?import javafx.scene.layout.AnchorPane?>
 <?import javafx.scene.layout.BorderPane?>
+<?import javafx.scene.layout.Pane?>
 <?import javafx.scene.text.Font?>
 <?import javafx.scene.text.Text?>
 
-<BorderPane fx:id="bp" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="720.0" prefWidth="1280.0" xmlns="http://javafx.com/javafx/17" xmlns:fx="http://javafx.com/fxml/1" fx:controller="application.LoginClass">
+<BorderPane fx:id="bp" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="720.0" prefWidth="1280.0" xmlns="http://javafx.com/javafx/18" xmlns:fx="http://javafx.com/fxml/1" fx:controller="application.LoginClass">
    <center>
-      <AnchorPane prefHeight="720.0" prefWidth="1280.0" BorderPane.alignment="CENTER">
+      <AnchorPane maxHeight="1.7976931348623157E308" maxWidth="1.7976931348623157E308" minHeight="-Infinity" minWidth="-Infinity" prefHeight="591.0" prefWidth="812.0" style="-fx-background-color: #1d334a;" BorderPane.alignment="CENTER">
          <children>
-            <Text layoutX="429.0" layoutY="261.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Usuario" wrappingWidth="92.68359375">
+            <Text fill="#f6f6f6" layoutX="169.0" layoutY="162.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Usuario" wrappingWidth="92.68359375">
                <font>
-                  <Font size="24.0" />
+                  <Font name="Malgun Gothic" size="24.0" />
                </font>
             </Text>
-            <Text layoutX="429.0" layoutY="310.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Contraseña">
+            <Text fill="#f6f6f6" layoutX="172.0" layoutY="232.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Contraseña">
                <font>
-                  <Font size="24.0" />
+                  <Font name="Malgun Gothic" size="24.0" />
                </font>
             </Text>
-            <TextField fx:id="txtUser" layoutX="631.0" layoutY="239.0" onInputMethodTextChanged="#eventKey" onKeyPressed="#eventKey" onKeyReleased="#eventKey" onKeyTyped="#eventKey" prefHeight="25.0" prefWidth="219.0" />
-            <PasswordField fx:id="txtPass" layoutX="631.0" layoutY="288.0" onInputMethodTextChanged="#eventKey" onKeyPressed="#eventKey" onKeyReleased="#eventKey" onKeyTyped="#eventKey" prefHeight="25.0" prefWidth="220.0" />
-            <Button fx:id="btnLogin" layoutX="631.0" layoutY="386.0" mnemonicParsing="false" onAction="#eventAction" prefHeight="60.0" prefWidth="219.0" text="LOG IN">
+            <TextField fx:id="txtUser" layoutX="397.0" layoutY="139.0" onInputMethodTextChanged="#eventKey" onKeyPressed="#eventKey" onKeyReleased="#eventKey" onKeyTyped="#eventKey" prefHeight="25.0" prefWidth="219.0" />
+            <PasswordField fx:id="txtPass" layoutX="396.0" layoutY="210.0" onInputMethodTextChanged="#eventKey" onKeyPressed="#eventKey" onKeyReleased="#eventKey" onKeyTyped="#eventKey" prefHeight="25.0" prefWidth="220.0" />
+            <Button fx:id="btnLogin" layoutX="397.0" layoutY="286.0" mnemonicParsing="false" onAction="#eventAction" prefHeight="60.0" prefWidth="219.0" text="LOG IN">
                <font>
                   <Font size="36.0" />
                </font>
@@ -34,13 +35,25 @@
                   <Font size="16.0" />
                </font>
             </Text>
-            <Button fx:id="btnReg" layoutX="629.0" layoutY="511.0" mnemonicParsing="false" onAction="#registro" prefHeight="76.0" prefWidth="226.0" />
-            <Text layoutX="443.0" layoutY="558.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Registro" wrappingWidth="90.13671875">
+            <Button fx:id="btnReg" layoutX="396.0" layoutY="401.0" mnemonicParsing="false" onAction="#registro" prefHeight="76.0" prefWidth="226.0" />
+            <Text fill="#f6f6f6" layoutX="186.0" layoutY="448.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Registro" wrappingWidth="90.13671875">
                <font>
-                  <Font size="24.0" />
+                  <Font name="Malgun Gothic" size="24.0" />
                </font>
             </Text>
          </children>
       </AnchorPane>
    </center>
+   <top>
+      <Pane prefHeight="150.0" prefWidth="1280.0" style="-fx-background-color: #5dc1b9;" BorderPane.alignment="CENTER" />
+   </top>
+   <bottom>
+      <Pane prefHeight="150.0" prefWidth="1280.0" style="-fx-background-color: #5dc1b9;" BorderPane.alignment="CENTER" />
+   </bottom>
+   <right>
+      <Pane prefHeight="486.0" prefWidth="250.0" style="-fx-background-color: #5dc1b9;" BorderPane.alignment="CENTER" />
+   </right>
+   <left>
+      <Pane prefHeight="486.0" prefWidth="250.0" style="-fx-background-color: #5dc1b9;" BorderPane.alignment="CENTER" />
+   </left>
 </BorderPane>
