--- a/src/application/RegistroPage.fxml
+++ b/src/application/RegistroPage.fxml
@@ -5,31 +5,32 @@
 <?import javafx.scene.control.TextField?>
 <?import javafx.scene.layout.AnchorPane?>
 <?import javafx.scene.layout.BorderPane?>
+<?import javafx.scene.layout.Pane?>
 <?import javafx.scene.text.Font?>
 <?import javafx.scene.text.Text?>
 
-<BorderPane fx:id="bp" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="720.0" prefWidth="1280.0" xmlns="http://javafx.com/javafx/17" xmlns:fx="http://javafx.com/fxml/1" fx:controller="application.RegistroClass">
+<BorderPane fx:id="bp" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="720.0" prefWidth="1280.0" xmlns="http://javafx.com/javafx/18" xmlns:fx="http://javafx.com/fxml/1" fx:controller="application.RegistroClass">
    <center>
-      <AnchorPane prefHeight="720.0" prefWidth="1280.0" BorderPane.alignment="CENTER">
+      <AnchorPane prefHeight="720.0" prefWidth="1280.0" style="-fx-background-color: #1d334a;" BorderPane.alignment="CENTER">
          <children>
-            <Text layoutX="407.0" layoutY="268.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Nombre de usuario">
+            <Text fill="#f6f6f6" layoutX="104.0" layoutY="268.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Nombre de usuario">
+               <font>
+                  <Font name="Malgun Gothic" size="24.0" />
+               </font>
+            </Text>
+            <Text fill="#f6f6f6" layoutX="104.0" layoutY="325.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Contraseña">
+               <font>
+                  <Font name="Malgun Gothic" size="24.0" />
+               </font>
+            </Text>
+            <TextField fx:id="txtUser" layoutX="436.0" layoutY="245.0" onInputMethodTextChanged="#eventKey" onKeyPressed="#eventKey" onKeyReleased="#eventKey" onKeyTyped="#eventKey" prefHeight="25.0" prefWidth="238.0" />
+            <PasswordField fx:id="txtPass" layoutX="435.0" layoutY="303.0" onInputMethodTextChanged="#eventKey" onKeyPressed="#eventKey" onKeyReleased="#eventKey" onKeyTyped="#eventKey" prefHeight="25.0" prefWidth="240.0" />
+            <Text fill="#f6f6f6" layoutX="104.0" layoutY="401.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Confirma contraseña">
                <font>
                   <Font size="24.0" />
                </font>
             </Text>
-            <Text layoutX="414.0" layoutY="347.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Contraseña">
-               <font>
-                  <Font size="24.0" />
-               </font>
-            </Text>
-            <TextField fx:id="txtUser" layoutX="665.0" layoutY="246.0" onInputMethodTextChanged="#eventKey" onKeyPressed="#eventKey" onKeyReleased="#eventKey" onKeyTyped="#eventKey" prefHeight="25.0" prefWidth="238.0" />
-            <PasswordField fx:id="txtPass" layoutX="665.0" layoutY="325.0" onInputMethodTextChanged="#eventKey" onKeyPressed="#eventKey" onKeyReleased="#eventKey" onKeyTyped="#eventKey" prefHeight="25.0" prefWidth="240.0" />
-            <Text layoutX="414.0" layoutY="414.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Confirma contraseña">
-               <font>
-                  <Font size="24.0" />
-               </font>
-            </Text>
-            <PasswordField fx:id="txtPass2" layoutX="665.0" layoutY="392.0" prefHeight="25.0" prefWidth="241.0" />
+            <PasswordField fx:id="txtPass2" layoutX="435.0" layoutY="379.0" prefHeight="25.0" prefWidth="241.0" />
             <Button fx:id="btnreg" layoutX="791.0" layoutY="547.0" mnemonicParsing="false" onAction="#eventAction" prefHeight="83.0" prefWidth="115.0" text="Registrar">
                <font>
                   <Font size="18.0" />
@@ -48,4 +49,16 @@
          </children>
       </AnchorPane>
    </center>
+   <top>
+      <Pane prefHeight="150.0" prefWidth="1280.0" style="-fx-background-color: #5dc1b9;" BorderPane.alignment="CENTER" />
+   </top>
+   <left>
+      <Pane prefHeight="320.0" prefWidth="250.0" style="-fx-background-color: #5dc1b9;" BorderPane.alignment="CENTER" />
+   </left>
+   <right>
+      <Pane prefHeight="320.0" prefWidth="250.0" style="-fx-background-color: #5dc1b9;" BorderPane.alignment="CENTER" />
+   </right>
+   <bottom>
+      <Pane prefHeight="150.0" prefWidth="1280.0" style="-fx-background-color: #5dc1b9;" BorderPane.alignment="CENTER" />
+   </bottom>
 </BorderPane>
