--- a/src/application/LoginPage.fxml
+++ b/src/application/LoginPage.fxml
@@ -9,7 +9,7 @@
 <?import javafx.scene.text.Font?>
 <?import javafx.scene.text.Text?>
 
-<BorderPane fx:id="bp" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="720.0" prefWidth="1280.0" xmlns="http://javafx.com/javafx/18" xmlns:fx="http://javafx.com/fxml/1" fx:controller="application.LoginClass">
+<BorderPane fx:id="bp" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="720.0" prefWidth="1280.0" xmlns="http://javafx.com/javafx/17" xmlns:fx="http://javafx.com/fxml/1" fx:controller="application.LoginClass">
    <center>
       <AnchorPane maxHeight="1.7976931348623157E308" maxWidth="1.7976931348623157E308" minHeight="-Infinity" minWidth="-Infinity" prefHeight="591.0" prefWidth="812.0" style="-fx-background-color: #1d334a;" BorderPane.alignment="CENTER">
          <children>
@@ -35,7 +35,10 @@
                   <Font size="16.0" />
                </font>
             </Text>
-            <Button fx:id="btnReg" layoutX="396.0" layoutY="401.0" mnemonicParsing="false" onAction="#registro" prefHeight="76.0" prefWidth="226.0" />
+            <Button fx:id="btnReg" layoutX="396.0" layoutY="401.0" mnemonicParsing="false" onAction="#registro" prefHeight="76.0" prefWidth="226.0" text="registro">
+               <font>
+                  <Font size="38.0" />
+               </font></Button>
             <Text fill="#f6f6f6" layoutX="186.0" layoutY="448.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Registro" wrappingWidth="90.13671875">
                <font>
                   <Font name="Malgun Gothic" size="24.0" />
