--- a/src/application/BilletesPage.fxml
+++ b/src/application/BilletesPage.fxml
@@ -1,20 +1,18 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
+<?import javafx.scene.control.Button?>
 <?import javafx.scene.layout.AnchorPane?>
-<?import javafx.scene.text.Font?>
-<?import javafx.scene.text.Text?>
+<?import javafx.scene.layout.BorderPane?>
 
 <AnchorPane prefHeight="600.0" prefWidth="1280.0" xmlns="http://javafx.com/javafx/17" xmlns:fx="http://javafx.com/fxml/1" fx:controller="application.BilletesClass">
    <children>
-      <Text fx:id="hola" layoutX="599.0" layoutY="292.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Billetes">
-         <font>
-            <Font size="26.0" />
-         </font>
-      </Text>
-      <Text fx:id="hola1" layoutX="533.0" layoutY="328.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Work in progress...">
-         <font>
-            <Font size="26.0" />
-         </font>
-      </Text>
+      <BorderPane fx:id="bp" layoutX="240.0" layoutY="100.0" prefHeight="200.0" prefWidth="800.0">
+         <center>
+            <AnchorPane fx:id="ap" prefHeight="200.0" prefWidth="800.0" BorderPane.alignment="CENTER" />
+         </center>
+      </BorderPane>
+      <Button layoutX="573.0" layoutY="422.0" mnemonicParsing="false" prefHeight="38.0" prefWidth="87.0" text="Compra" />
+      <Button fx:id="btnSoloIda" layoutX="415.0" layoutY="364.0" mnemonicParsing="false" onMouseClicked="#cargaSoloIda" text="SOLO IDA" />
+      <Button fx:id="btnVuelta" layoutX="743.0" layoutY="364.0" mnemonicParsing="false" onMouseClicked="#cargaIdaYvuelta" text="VUELTA" />
    </children>
 </AnchorPane>
