--- a/src/application/IdayvueltaPage.fxml
+++ b/src/application/IdayvueltaPage.fxml
@@ -1,38 +1,39 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
+<?import javafx.scene.Cursor?>
 <?import javafx.scene.control.Button?>
-<?import javafx.scene.control.ChoiceBox?>
-<?import javafx.scene.control.TextField?>
+<?import javafx.scene.control.ComboBox?>
+<?import javafx.scene.control.DatePicker?>
 <?import javafx.scene.layout.AnchorPane?>
 <?import javafx.scene.text.Font?>
 <?import javafx.scene.text.Text?>
 
-<AnchorPane prefHeight="200.0" prefWidth="800.0" xmlns="http://javafx.com/javafx/18" xmlns:fx="http://javafx.com/fxml/1" fx:controller="application.BilletesClass">
+<AnchorPane prefHeight="200.0" prefWidth="800.0" xmlns="http://javafx.com/javafx/17" xmlns:fx="http://javafx.com/fxml/1" fx:controller="application.BilletesClass">
    <children>
-      <ChoiceBox layoutX="50.0" layoutY="25.0" prefHeight="50.0" prefWidth="350.0" />
-      <ChoiceBox layoutX="400.0" layoutY="25.0" prefHeight="50.0" prefWidth="350.0" />
-      <Button layoutX="700.0" layoutY="125.0" mnemonicParsing="false" prefHeight="50.0" prefWidth="50.0" style="-fx-background-color: #1D334A;" text="-" textFill="#f6f6f6">
+      <Button fx:id="menosBilletes" layoutX="700.0" layoutY="125.0" mnemonicParsing="false" onMouseClicked="#alterNumBilletes" prefHeight="50.0" prefWidth="50.0" style="-fx-background-color: #1D334A;" text="-" textFill="#f6f6f6">
          <font>
             <Font name="System Bold" size="24.0" />
          </font>
+         <cursor>
+            <Cursor fx:constant="HAND" />
+         </cursor>
       </Button>
-      <Button layoutX="600.0" layoutY="125.0" mnemonicParsing="false" prefHeight="50.0" prefWidth="50.0" style="-fx-background-color: #1D334A;" text="+" textFill="#f6f6f6">
+      <Button fx:id="masBilletes" layoutX="600.0" layoutY="125.0" mnemonicParsing="false" onMouseClicked="#alterNumBilletes" prefHeight="50.0" prefWidth="50.0" style="-fx-background-color: #1D334A;" text="+" textFill="#f6f6f6">
          <font>
             <Font name="System Bold" size="24.0" />
          </font>
+         <cursor>
+            <Cursor fx:constant="HAND" />
+         </cursor>
       </Button>
-      <Text fill="#1d334a" layoutX="650.0" layoutY="163.0" strokeType="OUTSIDE" strokeWidth="0.0" text="1" textAlignment="CENTER" wrappingWidth="50.0">
+      <Text fx:id="numBilletes" fill="#1d334a" layoutX="650.0" layoutY="163.0" onMouseClicked="#alterNumBilletes" strokeType="OUTSIDE" strokeWidth="0.0" text="0" textAlignment="CENTER" wrappingWidth="50.0">
          <font>
             <Font name="Malgun Gothic" size="32.0" />
          </font>
       </Text>
-      <TextField layoutX="50.0" layoutY="125.0" prefHeight="50.0" prefWidth="275.0" promptText="ida">
-         <font>
-            <Font size="22.0" />
-         </font></TextField>
-      <TextField layoutX="325.0" layoutY="125.0" prefHeight="50.0" prefWidth="275.0" promptText="vuelta">
-         <font>
-            <Font size="22.0" />
-         </font></TextField>
+      <DatePicker fx:id="dpIda" layoutX="50.0" layoutY="125.0" prefHeight="51.0" prefWidth="274.0" />
+      <DatePicker fx:id="dpVuelta" layoutX="326.0" layoutY="125.0" prefHeight="51.0" prefWidth="274.0" />
+      <ComboBox fx:id="cbOrigen" layoutX="50.0" layoutY="25.0" onMouseClicked="#setComboBox" prefHeight="51.0" prefWidth="350.0" />
+      <ComboBox fx:id="cbDestino" layoutX="400.0" layoutY="25.0" onMouseClicked="#setComboBox" prefHeight="51.0" prefWidth="350.0" />
    </children>
 </AnchorPane>
