--- a/src/application/LoginPage.fxml
+++ b/src/application/LoginPage.fxml
@@ -12,7 +12,7 @@
 <?import javafx.scene.text.Font?>
 <?import javafx.scene.text.Text?>
 
-<BorderPane fx:id="bp" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="720.0" prefWidth="1280.0" xmlns="http://javafx.com/javafx/18" xmlns:fx="http://javafx.com/fxml/1" fx:controller="application.LoginClass">
+<BorderPane fx:id="bp" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="720.0" prefWidth="1280.0" xmlns="http://javafx.com/javafx/17" xmlns:fx="http://javafx.com/fxml/1" fx:controller="application.LoginClass">
    <center>
       <AnchorPane maxHeight="1.7976931348623157E308" maxWidth="1.7976931348623157E308" minHeight="-Infinity" minWidth="-Infinity" prefHeight="591.0" prefWidth="812.0" style="-fx-background-color: #f6f6f6;" BorderPane.alignment="CENTER">
          <children>
@@ -93,7 +93,7 @@
                   </ImageView>
                   <Pane layoutX="1250.0" prefHeight="30.0" prefWidth="30.0" style="-fx-background-color: #e55137;">
                      <children>
-                        <Button fx:id="exit1" layoutX="-6.0" mnemonicParsing="false" onMouseClicked="#close" prefHeight="27.0" prefWidth="43.0" style="-fx-background-color: transparent;">
+                        <Button fx:id="close" layoutX="-6.0" mnemonicParsing="false" onMouseClicked="#close" prefHeight="27.0" prefWidth="43.0" style="-fx-background-color: transparent;">
                            <cursor>
                               <Cursor fx:constant="HAND" />
                            </cursor>
