--- a/src/application/MainInfinity.fxml
+++ b/src/application/MainInfinity.fxml
@@ -2,6 +2,7 @@
 
 <?import javafx.scene.Cursor?>
 <?import javafx.scene.control.Button?>
+<?import javafx.scene.control.ScrollPane?>
 <?import javafx.scene.image.Image?>
 <?import javafx.scene.image.ImageView?>
 <?import javafx.scene.layout.AnchorPane?>
@@ -12,7 +13,7 @@
 <?import javafx.scene.text.Font?>
 <?import javafx.scene.text.Text?>
 
-<Pane maxHeight="720.0" maxWidth="1280.0" minHeight="720.0" minWidth="1280.0" prefHeight="720.0" prefWidth="1280.0" style="-fx-background-color: #f6f6f6f6;" xmlns="http://javafx.com/javafx/18" xmlns:fx="http://javafx.com/fxml/1" fx:controller="application.MainInfinityClass">
+<Pane maxHeight="720.0" maxWidth="1280.0" minHeight="720.0" minWidth="1280.0" prefHeight="720.0" prefWidth="1280.0" style="-fx-background-color: #f6f6f6f6;" xmlns="http://javafx.com/javafx/17" xmlns:fx="http://javafx.com/fxml/1" fx:controller="application.MainInfinityClass">
    <children>
       <AnchorPane layoutY="30.0" maxHeight="122.0" maxWidth="1280.0" minHeight="0.0" minWidth="0.0" prefHeight="90.0" prefWidth="1280.0" style="-fx-background-color: #1D334A;">
          <children>
@@ -68,7 +69,7 @@
                   </Button>
                </children>
             </HBox>
-            <Button layoutX="1188.0" layoutY="14.0" mnemonicParsing="false" prefHeight="63.0" prefWidth="67.0" style="-fx-background-color: transparent;" text="Button">
+            <Button layoutX="1188.0" layoutY="14.0" mnemonicParsing="false" onMouseClicked="#muerstraCarrito" prefHeight="63.0" prefWidth="67.0" style="-fx-background-color: transparent;" text="Button">
                <graphic>
                   <ImageView fitHeight="55.0" fitWidth="50.0" pickOnBounds="true" preserveRatio="true">
                      <image>
@@ -87,6 +88,50 @@
          <center>
             <AnchorPane fx:id="ap" prefHeight="600.0" prefWidth="1280.0" BorderPane.alignment="CENTER" />
          </center>
+         <right>
+            <AnchorPane prefHeight="600.0" prefWidth="250.0" BorderPane.alignment="CENTER">
+               <children>
+                  <AnchorPane fx:id="apCarrito" prefHeight="600.0" prefWidth="250.0" style="-fx-background-color: #5dc1b9;" visible="false">
+                     <children>
+                        <AnchorPane layoutX="11.0" layoutY="8.0" prefHeight="532.0" prefWidth="230.0" style="-fx-background-color: white;">
+                           <children>
+                              <ScrollPane layoutX="-5.0" prefHeight="532.0" prefWidth="239.0">
+                                 <content>
+                                    <Text fx:id="txtCarrito" onMouseDragOver="#setTextCarrito" onMouseDragReleased="#setTextCarrito" strokeType="OUTSIDE" strokeWidth="0.0" wrappingWidth="223.13671875">
+                                       <font>
+                                          <Font size="14.0" />
+                                       </font>
+                                    </Text>
+                                 </content>
+                              </ScrollPane>
+                           </children>
+                        </AnchorPane>
+                        <AnchorPane layoutX="6.0" layoutY="540.0" prefHeight="55.0" prefWidth="212.0" style="-fx-background-color: WHITE;">
+                           <children>
+                              <Button fx:id="btnVerCarrito" layoutX="157.0" layoutY="-1.0" mnemonicParsing="false" onMouseClicked="#carritoLoad" prefHeight="55.0" prefWidth="83.0" style="-fx-background-color: #e55137;" text="ver varrito" textAlignment="CENTER" textFill="#f6f6f6" wrapText="true">
+                                 <font>
+                                    <Font name="Malgun Gothic Bold" size="14.0" />
+                                 </font>
+                                 <cursor>
+                                    <Cursor fx:constant="HAND" />
+                                 </cursor>
+                              </Button>
+                              <Text fx:id="txtPrecioFinal" layoutX="14.0" layoutY="37.0" strokeType="OUTSIDE" strokeWidth="0.0" textAlignment="RIGHT">
+                                 <font>
+                                    <Font size="24.0" />
+                                 </font>
+                              </Text>
+                              <Text layoutX="131.0" layoutY="36.0" strokeType="OUTSIDE" strokeWidth="0.0" text="€">
+                                 <font>
+                                    <Font size="24.0" />
+                                 </font>
+                              </Text>
+                           </children>
+                        </AnchorPane>
+                     </children>
+                  </AnchorPane>
+               </children></AnchorPane>
+         </right>
       </BorderPane>
       <Pane prefHeight="30.0" prefWidth="1280.0" style="-fx-background-color: #5dc1b9;">
          <children>
