--- a/bin/application/AlojamientoPage.fxml
+++ b/bin/application/AlojamientoPage.fxml
@@ -1,20 +1,62 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
+<?import javafx.scene.Cursor?>
+<?import javafx.scene.control.Button?>
+<?import javafx.scene.control.ComboBox?>
+<?import javafx.scene.control.DatePicker?>
+<?import javafx.scene.image.ImageView?>
 <?import javafx.scene.layout.AnchorPane?>
 <?import javafx.scene.text.Font?>
 <?import javafx.scene.text.Text?>
 
 <AnchorPane prefHeight="600.0" prefWidth="1280.0" xmlns="http://javafx.com/javafx/17" xmlns:fx="http://javafx.com/fxml/1" fx:controller="application.AlojamientoClass">
    <children>
-      <Text fx:id="hola" layoutX="571.0" layoutY="293.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Alojamiento">
+      <ComboBox fx:id="cbCiudad" layoutX="62.0" layoutY="72.0" onMouseClicked="#setComboBoxCiudad" prefHeight="51.0" prefWidth="327.0" />
+      <ComboBox fx:id="cbTipo" layoutX="62.0" layoutY="158.0" prefHeight="51.0" prefWidth="327.0" />
+      <ComboBox fx:id="cbAlojamientos" layoutX="63.0" layoutY="434.0" prefHeight="51.0" prefWidth="327.0" />
+      <DatePicker fx:id="dpEntrada" layoutX="62.0" layoutY="255.0" prefHeight="51.0" prefWidth="327.0" />
+      <DatePicker fx:id="dpSalida" layoutX="62.0" layoutY="340.0" prefHeight="51.0" prefWidth="327.0" />
+      <Text layoutX="62.0" layoutY="54.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Ciudad">
          <font>
-            <Font size="26.0" />
+            <Font size="18.0" />
          </font>
       </Text>
-      <Text fx:id="hola1" layoutX="533.0" layoutY="328.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Work in progress...">
+      <Text layoutX="61.0" layoutY="152.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Filtrar por tipo">
          <font>
-            <Font size="26.0" />
+            <Font size="18.0" />
          </font>
       </Text>
+      <Text layoutX="62.0" layoutY="428.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Alojamientos disponibles">
+         <font>
+            <Font size="18.0" />
+         </font>
+      </Text>
+      <Text layoutX="62.0" layoutY="242.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Fecha de entrada">
+         <font>
+            <Font size="18.0" />
+         </font>
+      </Text>
+      <Text layoutX="62.0" layoutY="334.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Fecha de salida">
+         <font>
+            <Font size="18.0" />
+         </font>
+      </Text>
+      <ImageView fx:id="imageView" fitHeight="480.0" fitWidth="720.0" layoutX="493.0" layoutY="72.0" pickOnBounds="true" preserveRatio="true" />
+      <Button fx:id="button" layoutX="63.0" layoutY="496.0" mnemonicParsing="false" onMouseClicked="#setImagen" prefHeight="75.0" prefWidth="150.0" style="-fx-background-color: #e55137;" text="boton" textAlignment="CENTER" textFill="#f6f6f6" wrapText="true">
+         <font>
+            <Font name="Malgun Gothic Bold" size="18.0" />
+         </font>
+         <cursor>
+            <Cursor fx:constant="HAND" />
+         </cursor>
+      </Button>
+      <Button fx:id="buttonPapa" layoutX="239.0" layoutY="496.0" mnemonicParsing="false" onMouseClicked="#setImagenPapa" prefHeight="75.0" prefWidth="150.0" style="-fx-background-color: #e55137;" text="P" textAlignment="CENTER" textFill="#f6f6f6" wrapText="true">
+         <font>
+            <Font name="Malgun Gothic Bold" size="18.0" />
+         </font>
+         <cursor>
+            <Cursor fx:constant="HAND" />
+         </cursor>
+      </Button>
    </children>
 </AnchorPane>
